# data_engineering_zoomcamp_2026

./: .gitignore  README.md
01-docker-terraform/: README.md
01-docker-terraform/data/: green_tripdata_2025-11.parquet
02-workflow-orchestration/: README.md
03-data-warehouse/: README.md
04-analytics-engineering/: README.md  dbt_project.yml
04-analytics-engineering/taxi_rides_ny/: dbt_project.yml
05-data-platforms/: README.md
05-data-platforms/my-pipeline/homework/: command.txt
06-batch/: README.md  pyproject.toml  spark.ipynb
06-batch/.ipynb_checkpoints/: spark-checkpoint.ipynb
07-streaming/: pyproject.toml
07-streaming/workshop/: GREEN_TAXI_ANALYSIS_README.md  Makefile  README.md  docker-compose.yml  get_homework_answers.sh  green_tripdata_2025-10.parquet  query_green_results.sh  query_session_results.sh  query_window_results.sh  run_all_analyses.sh  run_complete_green_analysis.sh  run_green_analysis.sh  run_green_consumer.sh  run_green_window_aggregation.sh  run_hourly_tips_analysis.sh  run_pipeline.sh  run_session_window_analysis.sh
07-streaming/workshop/src/job/: pass_through_job.py  (+4 more)
dlt-workshop-taxi-pipeline/: README.md  dlt_pipeline.ipynb  pyproject.toml  taxi_pipeline.py
taxi-pipeline/: pyproject.toml  taxi_pipeline.py
wk1/: .gitignore  docker-compose.yaml  ingest_data.py  main.py  pyproject.toml
wk1/data/: WK1_Assignment.ipynb
wk1/terraform-gcp/: main.tf
wk2-workflow-orchestration/: README.md  docker-compose.yaml  main.py  pyproject.toml
wk2-workflow-orchestration/flows/: ingest_to_gcs.yaml  load_to_bq.yaml  nyc_taxi_parent.yaml
(+11 files in other folders)
